infra/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: todo-front
  ports:
    - protocol: TCP
      port: 3006
      targetPort: 3006
